# pybrary-of-babel

./: .gitignore  README.md  pyproject.toml
scripts/: time_generate.py
src/pybrary_of_babel/: __init__.py  __main__.py  experiment.py  generate.py  runner.py
