[project]
name = "pybrary-of-babel"
version = "0.1.0"
description = "Some experiments with randomly generated Python code."
readme = "README.md"
authors = [
    { name = "ianwhale", email = "ianpatrickwhalen@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "joblib>=1.5.2",
    "loguru>=0.7.3",
    "numpy>=2.3.4",
    "pydantic-settings>=2.11.0",
    "tqdm>=4.67.1",
    "typer>=0.20.0",
]

[project.scripts]
pybrary-of-babel = "pybrary_of_babel.__main__:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
src = ["src", "scripts"]
